--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "temple-admin",
   "version": "1.0.0",
@@ -14,12 +12,16 @@
     "vuex": "^3.6.2",
     "vue-router": "^3.5.3",
     "element-ui": "^2.15.13",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "@babel/runtime": "^7.12.0",
+    "core-js": "^3.6.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@babel/core": "^7.12.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
