--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:unit": "jest --coverage ",
+    "build:prod": "vue-cli-service build --mode production",
+    "build:report": "vue-cli-service build --report",
+    "deploy": "npm run build:prod && node deploy.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.0",
@@ -26,11 +30,38 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "^27.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.6",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^27.0.6",
+    "jest-environment-jsdom": "^27.0.6",
+    "jest-transform-stub": "^2.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "compression-webpack-plugin": "^6.1.1",
+    "terser-webpack-plugin": "^4.2.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.vue$": "@vue/vue2-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "\\.(css|less)$": "<rootDir>/tests/styleMock.js"
+    },
+    "testEnvironment": "jsdom",
+    "setupFiles": [
+      "<rootDir>/tests/setup.js"
+    ]
   }
 }
