--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,10 @@
 # 生产环境配置
 NODE_ENV=production
-VUE_APP_BASE_URL=https://api.example.com
-VUE_APP_BASE_API=/api 
+# 生产环境API地址
+VUE_APP_BASE_URL=https://temple-api.example.com
+# API前缀
+VUE_APP_BASE_API=/api
+# 是否启用加密
+VUE_APP_ENABLE_ENCRYPT=true
+# CDN地址(如果有)
+# VUE_APP_CDN_URL=https://cdn.example.com 
