--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 NODE_ENV=development
-VUE_APP_BASE_API=/api 
+VUE_APP_BASE_API=/admin
 # VUE_APP_BASE_URL=https://admin-api.macrozheng.com
 VUE_APP_BASE_URL=https://apifoxmock.com/m1/5641254-5321126-default
+VUE_APP_ENABLE_ENCRYPT=false
