--- a/.env.beta
+++ b/.env.beta
@@ -3,6 +3,6 @@ NODE_ENV=beta
 # 测试环境API地址
 VUE_APP_BASE_URL=https://apifoxmock.com/m1/5641254-5321126-default
 # API前缀
-VUE_APP_BASE_API=/api
+VUE_APP_BASE_API=/admin
 # 是否启用加密
 VUE_APP_ENABLE_ENCRYPT=false 
