--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-jlunar-datepicker": "^2.3.2",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2",
-    "wangeditor": "^4.7.15"
+    "wangeditor": "^4.7.15",
+    "js-md5": "^0.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
